<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:text="0"
        android:textSize="20sp"
        android:gravity="right"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <Button
        android:id="@+id/key_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        />

    <Button
        android:id="@+id/key_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_plus"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        />

    <Button
        android:id="@+id/key_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_plus"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_plus"
        />

    <Button
        android:id="@+id/key_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        />

    <Button
        android:id="@+id/key_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_2"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        />

    <Button
        android:id="@+id/key_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_minus"
        />

    <Button
        android:id="@+id/key_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        />

    <Button
        android:id="@+id/key_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_5"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        />

    <Button
        android:id="@+id/key_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_multi"
        />

    <Button
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_7"
        app:layout_constraintEnd_toEndOf="@id/key_8"
        android:layout_marginLeft="10dp" />

    <Button
        android:id="@+id/key_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_point"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_9"
        app:layout_constraintStart_toStartOf="@id/key_9"
        app:layout_constraintEnd_toEndOf="@id/key_9"
        />

    <Button
        android:id="@+id/key_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_plus"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/key_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_minus"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_plus"
        app:layout_constraintStart_toEndOf="@id/key_6"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/key_multi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_multi"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_minus"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/key_division"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_division"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_multi"
        app:layout_constraintStart_toStartOf="@id/key_multi"
        app:layout_constraintEnd_toEndOf="@id/key_multi"
        />

    <Button
        android:id="@+id/key_equal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_equal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/key_division"
        app:layout_constraintStart_toStartOf="@id/key_multi"
        app:layout_constraintEnd_toEndOf="@id/key_multi"
        />

    <Button
        android:id="@+id/key_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_clear"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/key_1"
        android:layout_marginLeft="10dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_wall_bricks_white_white_brick_wall_texture_construction_architecture_surface_1076087"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        >

    </androidx.appcompat.widget.AppCompatImageView>

</androidx.constraintlayout.widget.ConstraintLayout>